--- a/index.html
+++ b/index.html
@@ -1,481 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>总厨网</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/common.css">
-    <script src="js/bootstrap.min.js"></script>
-    <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-
-        .logo {
-            width: 98px;
-            margin-top: 5px;
-        }
-
-        .navbar-default {
-            background-image: none;
-            background: #fff;
-        }
-
-        .nav > li a {
-            font-size: 16px;
-            height: 60px;
-            line-height: 60px;
-            padding: 0 15px;
-        }
-
-        .index_titel {
-            font-size: 6rem;
-            color: #62B134;
-        }
-
-        .description {
-            font-size: 22px;
-            font-size: 48px;
-        }
-
-        #banner {
-            /* height: calc(100% - 60px);    */
-            height: 100%;
-            background: url(img/tractor.jpg) no-repeat;
-            background-size: cover;
-            background-position: bottom;
-            color: #fff;
-            box-sizing: border-box;
-        }
-
-        .banner_content {
-            padding-top: 19%;
-        }
-
-        .banner_text_titel {
-            font-size: 60px;
-            text-align: left;
-            text-indent: 45px;
-        }
-
-        .banner_text_en {
-            font-size: 45px;
-            text-indent: 45px;
-        }
-
-        #server {
-            background: #f7f7f7;
-        }
-
-        #weserver {
-            max-width: 1170px;
-            margin: 0 auto;
-        }
-
-            #weserver .thumbnail {
-                box-shadow: none;
-                -webkit-box-shadow: none;
-                border: none;
-                background: #f7f7f7;
-            }
-
-        .s_img {
-            width: 75%;
-        }
-
-        #difference {
-            max-width: 900px;
-            text-align: center;
-            margin: 0 auto;
-            font-size: 16px;
-            clear: both;
-        }
-
-            #difference .row {
-                border-bottom: 1px solid #ccc;
-                margin-bottom: 40px;
-                line-height: 80px;
-            }
-
-        #weserver .caption h3 {
-            text-align: center;
-            color: #62B134;
-        }
-
-        #guanyu p {
-            text-align: center;
-            font-size: 16px;
-            line-height: 28px;
-            font-weight: 400;
-            margin-bottom: 40px;
-            color: #666;
-        }
-
-        #footer {
-            height: 420px;
-            width: 100%;
-            background: url(img/foot_bg.jpg) no-repeat;
-            background-size: cover;
-            background-position: bottom;
-        }
-
-        .my_difference_ico {
-            height: 80px;
-            background: url(img/right.png) no-repeat;
-            background-size: 30%;
-            background-position: center center;
-            position: relative;
-            top: -28px;
-        }
-
-        #footer .thumbnail {
-            box-shadow: none;
-            -webkit-box-shadow: none;
-            border: none;
-            background: #f7f7f7;
-        }
-
-        #footer p {
-            text-align: center;
-            color: #fff;
-        }
-        .service-icon {
-    /* border: 3px solid #999999; */
-    background: #62B134;
-    line-height: 85px;
-    color: #fff;
-    height: 85px;
-    width: 85px;
-    border-radius: 100%;
-        text-align: center;
-    margin:0 auto
-}
-        .service-icon img{
-            width:75%
-        }
-    </style>
+<meta charset="utf-8">
+<link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
+<title>李朋去吃屎</title>
 </head>
-
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                    <span class="sr-only">切换导航</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#" class="nav-title">
-                    <img class="logo" src="img/index_02.jpg">
-                </a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-menu">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="cative"><a href="#" style="color:#62B134">首页</a></li>
-                    <li class="cative"><a href="#">公司简介</a></li>
-                    <li class="cative"><a href="#">新闻资讯</a></li>
-                    <li class="cative"><a href="#">联系我们</a></li>
-                    <li class="cative"><a href="#">总厨商城</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div id="banner" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="banner" style="background:url(img/13.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div id="banner" style="background:url(img/14.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="banner" style="background:url(img/03.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="banner" style="background:url(img/04.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="banner" style="background:url(img/05.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="banner" style="background:url(img/06.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div id="banner" style="background:url(img/07.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="banner" style="background:url(img/08.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div id="banner" style="background:url(img/09.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <div id="banner" style="background:url(img/10.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div id="banner" style="background:url(img/11.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="banner" style="background:url(img/12.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
-        <div class="container-fluid">
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="banner_content">
-                        <p class="banner_text_titel">总厨网</p>
-                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
-                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
-                        <p class="banner_text_en">There is no hard business</p>
-                        <div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
+    <a href="https://www.baidu.com/">李朋去吃屎李朋去吃屎李朋去吃屎李朋去吃屎李朋去吃屎李朋去吃屎</a>
+    <div style="text-align:center"><img src="bd_logo1.png"></div>
+    <div style="text-align:center"><input style="position: relative; height: 31px;   margin: 6px 0 0 7px;    background: transparent;  margin: 6px 0 0 7px;    font: 16px/18px arial;   width: 500px;" type="text"/><input style="width: 100px;height: 36px;  background: #3385ff;  border: none; font-size: 15px;   color: #fff;" type="button" value="百度一下"/></div>
 </body>
-
 </html>
-<script>
-
-    // $(window).scroll(function () {
-    //     if ($(".navbar").offset().top > 50) {
-    //         $(".navbar-fixed-top").addClass("top-nav");
-    //     } else {
-    //         $(".navbar-fixed-top").removeClass("top-nav");
-    //     } })
-</script>
-<style>
-    @media only screen and (max-width: 736px) {
-        .banner_text_titel {
-            font-size: 26px;
-            text-align: center;
-            text-indent: 0px;
-        }
-
-        .banner_text_en {
-            font-size: 18px;
-            text-align: center;
-            text-indent: 0px;
-        }
-
-        .banner_content {
-            padding-top: 75%;
-        }
-
-        .my_difference_ico {
-            height: 60px;
-            background: url(img/right.png) no-repeat;
-            background-size: 8%;
-            background-position: center center;
-            position: relative;
-            top: -5px;
-            -webkit-transform: rotate(90deg);
-            -moz-transform: rotate(90deg);
-            -o-transform: rotate(90deg);
-            -ms-transform: rotate(90deg);
-            transform: rotate(90deg);
-        }
-
-        .phone_p {
-            padding: 0 25px;
-        }
-    }
-</style>
